--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@types/react-router-dom": "^5.3.3",
+    "babel-loader": "^9.1.3"
   }
 }
